# thesis

./: .gitignore  README.md  constraints.py  finite.py  infinite.py  knapsack.py  multiline.py  plot.py  pyproject.toml  utils.py
colloq/: README.md  main.tex
pres/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  preamble.tex
report/: main.tex
src/: common.py  constants.py  decorators.py  knapsack.py  schema.py  utils.py
thesis/: main.tex  preamble.tex  refs.bib
thesis/chapters/: algo.tex  apps.tex  conclusion.tex  finite.tex  infinite.tex  intro.tex  multiple.tex  prerreqs.tex  theory.tex
times/: 2d-3dig.json  2d-4dig.json  3d-3dig.json  3d-4dig.json
times/fin/: mt-dim-20-reps.npy  poscase-dim-1000.npy
times/fin/dim/bb_full/mt/: logs  stats.json
times/fin/dim/bb_raw/mt/: logs  stats.json
times/fin/dim/dioph-left/mt/: logs  stats.json
times/fin/dim/dioph-right/mt/: logs  stats.json
times/fin/dim/dp/mt/: logs  stats.json
times/fin/rhs/bb_full/1000n/: logs  stats.json
times/fin/rhs/bb_raw/1000n/: logs  stats.json
times/fin/rhs/dioph-left/1000n/: logs  stats.json
times/fin/rhs/dioph-right/1000n/: logs  stats.json
times/fin/rhs/dp/1000n/: logs  stats.json
times/inf/: neg-4d-3dig.json
times/inf/rhs/bb_full/4n-3d/: logs  stats.json
times/inf/rhs/bb_full/4n-4d/: logs  stats.json
times/inf/rhs/bb_full/4n-5d/: logs  stats.json
times/inf/rhs/bb_raw/4n-3d/: logs  stats.json
times/inf/rhs/bb_raw/4n-4d/: logs  stats.json
times/inf/rhs/bb_raw/4n-5d/: logs  stats.json
times/inf/rhs/dioph/4n-3d/: logs  (+1 more)
(+4 files in other folders)
