[project]
name = "thesis"
version = "0.1.0"
description = "improves branch and bound for specific problem instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hsnf>=0.3.16",
    "ipython>=9.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pulp>=3.1.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jedi>=0.19.2",
    "mypy>=1.15.0",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "ruff>=0.11.5",
]
